@@ -408,6 +408,9 @@ KERNEL_FQ void m02500_aux1 (KERN_ATTR_TMPS_ESALT (wpa_pbkdf2_tmp_t, wpa_eapol_t)
 
   GLOBAL_AS const wpa_eapol_t *wpa_eapol = &esalt_bufs[digest_cur];
 
+  // this can occur on -a 9 because we are ignoring module_deep_comp_kernel()
+  if (wpa_eapol->keyver != 1) return;
+
   u32 pke[32];
 
   pke[ 0] = wpa_eapol->pke[ 0];
@@ -592,6 +595,9 @@ KERNEL_FQ void m02500_aux2 (KERN_ATTR_TMPS_ESALT (wpa_pbkdf2_tmp_t, wpa_eapol_t)
   const u32 digest_cur = DIGESTS_OFFSET_HOST + digest_pos;
 
   GLOBAL_AS const wpa_eapol_t *wpa_eapol = &esalt_bufs[digest_cur];
+
+  // this can occur on -a 9 because we are ignoring module_deep_comp_kernel()
+  if (wpa_eapol->keyver != 2) return;
 
   u32 pke[32];
 
@@ -808,6 +814,9 @@ KERNEL_FQ void m02500_aux3 (KERN_ATTR_TMPS_ESALT (wpa_pbkdf2_tmp_t, wpa_eapol_t)
   const u32 digest_cur = DIGESTS_OFFSET_HOST + digest_pos;
 
   GLOBAL_AS const wpa_eapol_t *wpa_eapol = &esalt_bufs[digest_cur];
+
+  // this can occur on -a 9 because we are ignoring module_deep_comp_kernel()
+  if (wpa_eapol->keyver != 3) return;
 
   u32 pke[32];
 
